--- a/_posts/2022-06-21-MD_Prac_2.md
+++ b/_posts/2022-06-21-MD_Prac_2.md
@@ -2,9 +2,12 @@
 layout: post
 title: MD_Practice 2
 subtitle: writing a markdown file w/ md files
-categories: practice
+categories: md_sample
 tags: [markdown, practice]
 ---
+
+Categories: practice   
+
 
 `Very Important info`
 
